//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Organization {
  id Int [pk, increment]
  name String [not null]
  type String [not null]
  users User [not null]
  subjects Subject [not null]
  groups Group [not null]
}

Table User {
  id Int [pk, increment]
  name String [not null]
  role Role [not null]
  email String [unique, not null]
  password String [not null]
  organization_id Int [not null]
  organization Organization [not null]
  group_id Int
  group Group
  subjects Subject [not null]
  testSessions TestSession [not null]
}

Table Group {
  id Int [pk, increment]
  name String [not null]
  courses Course [not null]
  students User [not null]
  organization_id Int [not null]
  organization Organization [not null]
}

Table Course {
  id Int [pk, increment]
  icon String [not null, default: '📕']
  title String [not null]
  groups Group [not null]
  subject_id Int [not null]
  lessons Lesson [not null]
  teacher_id Int [not null]
}

Table Subject {
  id Int [pk, increment]
  name String [not null]
  teachers User [not null]
  organization_id Int [not null]
  organization Organization [not null]
}

Table Lesson {
  id Int [pk, increment]
  course_id Int [not null]
  course Course [not null]
  title String [not null]
  presentation_url String [not null]
  lecture_url String [not null]
  test Test
}

Table Test {
  id Int [pk, increment]
  title String [not null]
  lesson_id Int [unique, not null]
  lesson Lesson [not null]
  questions Question [not null]
  sessions TestSession [not null]
}

Table TestSession {
  id Int [pk, increment]
  test_id Int [not null]
  test Test [not null]
  student_id Int [not null]
  student User [not null]
  answers StudentAnswer [not null]
  results SessionResult [not null]
}

Table SessionResult {
  id Int [pk, increment]
  session_id Int [not null]
  session TestSession [not null]
  total Int [not null]
  correct Int [not null]
  percentage Int [not null]
}

Table StudentAnswer {
  id Int [pk, increment]
  session_id Int [not null]
  session TestSession [not null]
  question_id Int [not null]
  question Question [not null]
  answer_id Int [not null]
  answer Answer [not null]
}

Table Question {
  id Int [pk, increment]
  test_id Int [not null]
  test Test [not null]
  text String [not null]
  type QuestionType [not null]
  answers Answer [not null]
  StudentAnswer StudentAnswer [not null]
}

Table Answer {
  id Int [pk, increment]
  question_id Int [not null]
  question Question [not null]
  text String [not null]
  correct Boolean [not null]
  StudentAnswer StudentAnswer [not null]
}

Enum Role {
  ADMIN
  ORGANIZATOR
  STUDENT
  TEACHER
}

Enum QuestionType {
  SINGLE
  MULTI
}

Ref: User.organization_id > Organization.id

Ref: User.group_id > Group.id

Ref: Group.organization_id > Organization.id

Ref: Subject.organization_id > Organization.id

Ref: Lesson.course_id > Course.id

Ref: Test.lesson_id - Lesson.id

Ref: TestSession.test_id > Test.id

Ref: TestSession.student_id > User.id

Ref: SessionResult.session_id > TestSession.id

Ref: StudentAnswer.session_id > TestSession.id

Ref: StudentAnswer.question_id > Question.id

Ref: StudentAnswer.answer_id > Answer.id

Ref: Question.test_id > Test.id

Ref: Answer.question_id > Question.id